--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
                                         <a href="https://www.pinterest.com/niharikamomtaz/_saved/"
                                             class="animate fade-in animation-time-1s delay-08s"><i
                                                 class="fa fa-pinterest"></i></a>
+                                        <a href="https://linkedin.com/"
+                                            class="animate fade-in animation-time-1s delay-1s"><i
+                                                class='fa fa-linkedin'></i><br /></a>
+
                                         <a href="https://twitter.com/niharikamomtaz?lang=bn"
                                             class="animate fade-in animation-time-1s delay-1s"><i
                                                 class='fa fa-twitter'></i><br /></a>
-
                                         <!-- <a href="https://twitter.com/niharikamomtaz?lang=bn"
                                             class="animate fade-in animation-time-1s delay-1s"><i
                                                 class="fa fa-telegram"></i><br /></a> -->
