--- a/about.html
+++ b/about.html
@@ -96,25 +96,30 @@
 										<li><a href="index.html" style="color: white">Home</a>
 										</li>
 										<li><a href="about.html" style="color: white">Origin</a></li>
+
+
+
 										<li><a href="brandz.html" style="color: white">Brandz</a>
 											<ul class="submenu ">
 												<li><a href="1972.html">1972</a>
-
-
 												</li>
 												<li><a href="outler.html">1972 Conscious </a></li>
-												<li><a href="outler.html">OunLiner</a></li>
 												<li><a href="zenena.html">Zenana</a></li>
-												<li><a href="heritage.html">Weaving the Heritage</a></li>
 
 											</ul>
 										</li>
-										<li><a href="newsroom.html" style="color: white">News Room</a></li>
-										<li><a href="runway.html" style="color: white">Runway</a></li>
-										<li><a href="celebrity.html" style="color: white">Celebrity</a></li>
-										<li><a href="craft.html" style="color: white">Crafts</a></li>
-										<li><a href="https://www.bangladeshartweek.com/" target="_blank"
-												style="color: white">Bangladesh Art
+										<li><a href="brandz.html" style="color: white">Gallery</a>
+											<ul class="submenu ">
+												<li><a href="newsroom.html">News Room</a></li>
+												<li><a href="runway.html">Runway</a></li>
+												<li><a href="celebrity.html">Celebrity</a></li>
+												<li><a href="craft.html">Crafts</a></li>
+
+
+											</ul>
+										</li>
+										<li><a href="https://www.bangladeshartweek.com/" style="color: white"
+												target="_blank">Bangladesh Art
 												Week</a>
 										</li>
 										<li><a href="https://www.facebook.com/heritagebangladeshfoundation/"
@@ -148,29 +153,29 @@
 									<li><a href="brandz.html">Brandz</a>
 										<ul class="submenu ">
 											<li><a href="1972.html">1972</a>
-
-
 											</li>
 											<li><a href="outler.html">1972 Conscious </a></li>
-											<li><a href="outler.html">OunLiner</a></li>
 											<li><a href="zenena.html">Zenana</a></li>
-											<li><a href="heritage.html">Weaving the Heritage</a></li>
-
 										</ul>
 									</li>
-									<li><a href="newsroom.html">News Room</a></li>
-									<li><a href="runway.html">Runway</a></li>
-									<li><a href="celebrity.html">Celebrity</a></li>
-									<li><a href="craft.html">Crafts</a></li>
-									<li><a href="https://www.bangladeshartweek.com/" target="_blank">Bangladesh Art
-											Week</a>
+									<li><a href="brandz.html">Gallery</a>
+										<ul class="submenu ">
+											<li><a href="newsroom.html">News Room</a></li>
+											<li><a href="runway.html">Runway</a></li>
+											<li><a href="celebrity.html">Celebrity</a></li>
+											<li><a href="craft.html">Crafts</a></li>
+											<li><a href="https://www.bangladeshartweek.com/" target="_blank">Bangladesh
+													Art
+													Week</a>
+											</li>
+											<li><a href="https://www.facebook.com/heritagebangladeshfoundation/"
+													target="_blank">Heritage Bangladesh</a></li>
+										</ul>
 									</li>
-									<li><a href="https://www.facebook.com/heritagebangladeshfoundation/"
-											target="_blank">Heritage Bangladesh</a></li>
+									<li><a href="metamoyna.html">Meta Moyna</a></li>
 									<li><a href="colaboration.html">Colaboration</a></li>
 									<li><a href="Auction.html">Auction</a></li>
 									<li><a href="contact.html">Contact</a></li>
-
 
 								</ul>
 							</nav>
@@ -372,10 +377,7 @@
 										<span>Dhaka</span><br>
 										<span>+880 171 156 4862</span><br>
 										<span style="padding-left: 45px;">niharika.momtaz@gmail.com</span>
-
-
 									</li>
-
 								</ul>
 							</div>
 						</div>
@@ -390,7 +392,6 @@
 											</a></li>
 										<!-- <li><a href="https://www.facebook.com/OutLiner.zenana">OutLiner</a></li> -->
 										<li><a href="https://www.facebook.com/groups/zenanamarketplace">Zenana</a></li>
-										<li><a href="heritage.html"> Weaving the Herittage</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -400,11 +401,7 @@
 
 								<nav>
 									<ul>
-										<li><a href="newsroom.html">News Room</a></li>
-										<li><a href="runway.html">Runway</a></li>
-										<li><a href="celebrity.html">Celebrity</a></li>
-										<li><a href="craft.html">Crafts</a></li>
-
+										<li><a href="newsroom.html">Gallery</a></li>
 										<li><a href="artWeek.html">Bangladesh Art Week</a></li>
 										<li><a href="https://www.bangladeshartweek.com/" target="_blank">Herittage
 												Bangladesh</a></li>
