--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     <a href="craft.html" class=" btn btn-default btn-framed">Crafts </a> -->
                                     <a href="colaboration.html" class=" btn btn-default btn-framed">Collaboration</a>
                                     <a href="artweek.html" class=" btn btn-default btn-framed">Bangladesh Art Week </a>
-                                    <a href="artweek.html" class=" btn btn-default btn-framed">Meta Moyna</a>
+                                    <a href="metamoyna.html" class=" btn btn-default btn-framed">Meta Moyna</a>
                                     <a href="heritagebangladeshfoundation.com"
                                         class=" btn btn-default btn-framed">Heritage Bangladesh Foundation </a>
                                     <a href="Auction.html" class=" btn btn-default btn-framed">Auction</a>
@@ -85,12 +85,15 @@
                                             class="animate fade-in animation-time-1s delay-1s"><i
                                                 class='fa fa-linkedin'></i><br /></a>
 
-                                        <a href="https://twitter.com/niharikamomtaz?lang=bn"
-                                            class="animate fade-in animation-time-1s delay-1s"><i
-                                                class='fa fa-twitter'></i><br /></a>
+
                                         <!-- <a href="https://twitter.com/niharikamomtaz?lang=bn"
                                             class="animate fade-in animation-time-1s delay-1s"><i
                                                 class="fa fa-telegram"></i><br /></a> -->
+                                        <a href="https://www.tiktok.com/@niharika.momtaz?_d=secCgsIARCbDRgBIAMoARI%2BCjzks3PNf0bSvRfOlql4Rh4gqmQGWDPF1smoY%2BEFWojP%2FSY%2BUHN5R5cUEbZUeq%2BtCxl6Z%2BfEepw3H82l%2FR0aAA%3D%3D&language=en&sec_uid=MS4wLjABAAAAYmP_HMMdR3DNO8JAqCvumjeAz3IgqwT6tXDL3YzHosyV4z_VU6l8qWNUi1dGJWzj&share_author_id=6568057217109934085&tt_from=copy&u_code=d0g84bmii4ldgd&user_id=6568057217109934085&utm_campaign=client_share&utm_medium=ios&utm_source=copy&source=h5_m&_r=1"
+                                            class="animate fade-in animation-time-1s delay-1s">
+                                            <span class="iconify" data-icon="simple-icons:telegram"
+                                                data-inline="false"></span>
+                                        </a>
                                         <a href="https://www.tiktok.com/@niharika.momtaz?_d=secCgsIARCbDRgBIAMoARI%2BCjzks3PNf0bSvRfOlql4Rh4gqmQGWDPF1smoY%2BEFWojP%2FSY%2BUHN5R5cUEbZUeq%2BtCxl6Z%2BfEepw3H82l%2FR0aAA%3D%3D&language=en&sec_uid=MS4wLjABAAAAYmP_HMMdR3DNO8JAqCvumjeAz3IgqwT6tXDL3YzHosyV4z_VU6l8qWNUi1dGJWzj&share_author_id=6568057217109934085&tt_from=copy&u_code=d0g84bmii4ldgd&user_id=6568057217109934085&utm_campaign=client_share&utm_medium=ios&utm_source=copy&source=h5_m&_r=1"
                                             class="animate fade-in animation-time-1s delay-1s">
                                             <span class="iconify" data-icon="simple-icons:tiktok"
