--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,8 @@
 			<!-- Header-Top End -->
 			<!-- Header Start -->
 			<div class="header" style="background-color: #756213;
-			background-image: linear-gradient(315deg, #756213 0%, #000000 74%);
-			">
+		background-image: linear-gradient(315deg, #756213 0%, #000000 74%);
+		">
 				<div class="container">
 					<div class="row" align="center">
 						<!-- Logo Start -->
@@ -81,25 +81,30 @@
 										<li><a href="index.html" style="color: white">Home</a>
 										</li>
 										<li><a href="about.html" style="color: white">Origin</a></li>
+
+
+
 										<li><a href="brandz.html" style="color: white">Brandz</a>
 											<ul class="submenu ">
 												<li><a href="1972.html">1972</a>
-
-
 												</li>
 												<li><a href="outler.html">1972 Conscious </a></li>
-												<li><a href="outler.html">OunLiner</a></li>
 												<li><a href="zenena.html">Zenana</a></li>
-												<li><a href="heritage.html">Weaving the Heritage</a></li>
 
 											</ul>
 										</li>
-										<li><a href="newsroom.html" style="color: white">News Room</a></li>
-										<li><a href="runway.html" style="color: white">Runway</a></li>
-										<li><a href="celebrity.html" style="color: white">Celebrity</a></li>
-										<li><a href="craft.html" style="color: white">Crafts</a></li>
-										<li><a href="https://www.bangladeshartweek.com/" target="_blank"
-												style="color: white">Bangladesh Art
+										<li><a href="brandz.html" style="color: white">Gallery</a>
+											<ul class="submenu ">
+												<li><a href="newsroom.html">News Room</a></li>
+												<li><a href="runway.html">Runway</a></li>
+												<li><a href="celebrity.html">Celebrity</a></li>
+												<li><a href="craft.html">Crafts</a></li>
+
+
+											</ul>
+										</li>
+										<li><a href="https://www.bangladeshartweek.com/" style="color: white"
+												target="_blank">Bangladesh Art
 												Week</a>
 										</li>
 										<li><a href="https://www.facebook.com/heritagebangladeshfoundation/"
@@ -280,11 +285,7 @@
 
 								<nav>
 									<ul>
-										<li><a href="newsroom.html">News Room</a></li>
-										<li><a href="runway.html">Runway</a></li>
-										<li><a href="celebrity.html">Celebrity</a></li>
-										<li><a href="craft.html">Crafts</a></li>
-
+										<li><a href="newsroom.html">Gallery</a></li>
 										<li><a href="artWeek.html">Bangladesh Art Week</a></li>
 										<li><a href="https://www.bangladeshartweek.com/" target="_blank">Herittage
 												Bangladesh</a></li>
