--- a/contact.html
+++ b/contact.html
@@ -197,18 +197,13 @@
 										</div>
 										<div class="col-sm-6 col-xs-12">
 											<div class="contact-brief">
-												<h2 class="title-3">Dubai</h2>
+												<!-- <h2 class="title-3">Dubai</h2> -->
 												<ul>
-													<li>
-														<i class="pe-7s-map-marker"></i>
-														<span>Dubai </span>
-														<span>United Arab Emirates</span>
 
-													</li>
 													<li>
 														<i class="pe-7s-call"></i>
-														<span>+971 55 178 5800</span>
-														<span>+880 171 156 4862</span>
+														<span>Dubai - +971 55 178 5800</span>
+														<span>Dhaka - +880 171 156 4862</span>
 													</li>
 
 
@@ -268,7 +263,7 @@
 
 						<div class="col-lg-3 col-md-4 col-sm-4">
 							<div class="single-footer footer-menu">
-								<h4 class="widget-title title-top-border">Brandz</h4>
+								<h4 class="widget-title title-top-border">Collections</h4>
 								<nav>
 									<ul>
 										<li><a href="https://www.facebook.com/groups/260534944108007">1972</a></li>
