--- a/brandz.html
+++ b/brandz.html
@@ -37,6 +37,7 @@
 		<link rel="stylesheet" href="style.css">
 		<!-- responsive css -->
 		<link rel="stylesheet" href="css/responsive.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 		<!-- modernizr js -->
 		<script src="js/vendor/modernizr-2.8.3.min.js"></script>
 	</head>
@@ -125,7 +126,7 @@
 		</header>
 		<!-- HEADER-AREA END -->
 		<!-- MOBILE-MENU-AREA START -->
-		<div class="mobile-menu-area hidden-md hidden-lg">
+		<div class="mobile-menu-area hidden-md hidden-lg text-dark">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-xs-12">
@@ -138,8 +139,6 @@
 									<li><a href="brandz.html" style="color: white">Brandz</a>
 										<ul class="submenu ">
 											<li><a href="1972.html">1972</a>
-
-
 											</li>
 											<li><a href="outler.html">1972 Conscious </a></li>
 											<li><a href="outler.html">OunLiner</a></li>
@@ -273,7 +272,7 @@
 			<br>
 		</section>
 		<!-- FOOTER-AREA START -->
-		<footer class="footer-area">
+		<footer class="footer-area" style="margin-top: 10%;">
 			<!-- Footer-Top-Area Start -->
 
 			<!-- Footer-Top-Area End -->
@@ -284,7 +283,7 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-4 col-sm-4">
 							<div class="single-footer footer-about">
-								<h4 class="widget-title title-top-border">Contact us</h4>
+								<h4 class="widget-title title-top-border">Contact</h4>
 								<ul>
 									<li>
 										<i class="pe-7s-map-marker"></i>
@@ -292,39 +291,38 @@
 										<span>+971 55 178 5800</span><br>
 										<i class="pe-7s-map-marker"></i>
 										<span>Dhaka</span><br>
-										<span>+971 55 178 5800</span><br>
+										<span>+880 171 156 4862</span><br>
 										<span style="padding-left: 45px;">niharika.momtaz@gmail.com</span>
-
-
 									</li>
-
 								</ul>
 							</div>
 						</div>
-						<div class="col-lg-3 hidden-md hidden-sm">
+
+						<div class="col-lg-3 col-md-4 col-sm-4">
 							<div class="single-footer footer-menu">
-								<h4 class="widget-title title-top-border">Colelctions</h4>
+								<h4 class="widget-title title-top-border">Collections</h4>
 								<nav>
 									<ul>
 										<li><a href="https://www.facebook.com/groups/260534944108007">1972</a></li>
-										<li><a href="https://www.facebook.com/groups/260534944108007">1972 Consious</a>
-										</li>
-										<li><a href="https://www.facebook.com/OutLiner.zenana">OunLiner</a></li>
+										<li><a href="https://www.facebook.com/groups/260534944108007">1972 Conscious
+											</a></li>
+										<!-- <li><a href="https://www.facebook.com/OutLiner.zenana">OutLiner</a></li> -->
 										<li><a href="https://www.facebook.com/groups/zenanamarketplace">Zenana</a></li>
-										<li><a href="heritage.html"> Weaving the Heritage</a></li>
 									</ul>
 								</nav>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4">
+						<div class="col-lg-3 hidden-md hidden-sm">
 							<div class="single-footer footer-menu">
-								<h4 class="widget-title title-top-border">Brandz</h4>
+
 								<nav>
 									<ul>
-										<li><a href="https://www.facebook.com/groups/260534944108007">1972</a></li>
-										<li><a href="https://www.facebook.com/OutLiner.zenana">OunLiner</a></li>
-										<li><a href="https://www.facebook.com/groups/zenanamarketplace">Zenana</a></li>
-										<li><a href="heritage.html"> Weaving the Heritage</a></li>
+										<li><a href="newsroom.html">Gallery</a></li>
+										<li><a href="artWeek.html">Bangladesh Art Week</a></li>
+										<li><a href="https://www.bangladeshartweek.com/" target="_blank">Herittage Bangladesh</a></li>
+										<li><a href="metamoyna.html" >Meta Moyna</a></li>
+										<li><a href="colaboration.html" >Colaboration</a></li>
+										<li><a href="Auction.html" >Auction</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -333,29 +331,37 @@
 							<div class="single-footer instagram">
 								<h4 class="widget-title title-top-border">Follow us on :</h4>
 								<!-- <div class="instagram-thumb">
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/1.jpg"
-											alt="" /></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/2.jpg"
-											alt="" /></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/3.jpg"
-											alt="" /></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/4.jpg"
-											alt="" /></a>
-								</div> -->
+								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/1.jpg"
+										alt="" /></a>
+								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/2.jpg"
+										alt="" /></a>
+								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/3.jpg"
+										alt="" /></a>
+								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/4.jpg"
+										alt="" /></a>
+							</div> -->
 								<div class="social-media">
-									<a href="https://www.facebook.com/niharika.momtaz"><i
+									<a href="https://www.facebook.com/niharika.momtaz" target="_blank"><i
 											class="fa fa-facebook"></i></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><i
+									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn" target="_blank"><i
 											class="fa fa-instagram"></i></a>
+									<a href="https://www.pinterest.com/niharikamomtaz/_saved/" target="_blank"
+											class="animate fade-in animation-time-1s delay-08s"><i
+												class="fa fa-linkedin"></i></a>
+
 								</div>
 								<br>
 								<div class="social-media">
-									<a href="https://twitter.com/niharikamomtaz?lang=bn"
+									<a href="https://twitter.com/niharikamomtaz?lang=bn" target="_blank"
 										class="animate fade-in animation-time-1s delay-1s"><i
 											class="fa fa-twitter"></i></a>
-									<a href="https://www.pinterest.com/niharikamomtaz/_saved/"
+									<a href="https://www.pinterest.com/niharikamomtaz/_saved/" target="_blank"
 										class="animate fade-in animation-time-1s delay-08s"><i
 											class="fa fa-pinterest"></i></a>
+									<a href="https://www.youtube.com" target="_blank"
+										class="animate fade-in animation-time-1s delay-08s"><i
+											class="fa fa-youtube"></i></a>
+									
 								</div>
 							</div>
 						</div>
@@ -370,9 +376,9 @@
 					<div class="row">
 						<div class="col-sm-8">
 							<div class="copyright">
-								<p>Copyright &copy; <a href="#" target="_blank"><b> oraintech.solution </b></a> All
+								<p>Copyright &copy; <a href="#" target="_blank"><b> Niharika Momtaz </b></a> All
 									rights
-									reserved.</p>
+									reserved. Powered by Orain Tech</p>
 							</div>
 						</div>
 						<div class="col-sm-4">
