--- a/newsroom.html
+++ b/newsroom.html
@@ -309,125 +309,129 @@
 		<!-- BRANDS-LOGO-AREA END -->
 	</section>
 	<!-- FOOTER-AREA START -->
-	<footer class="footer-area">
-		<!-- Footer-Top-Area Start -->
+	<footer class="footer-area" style="margin-top: 10%;">
+			<!-- Footer-Top-Area Start -->
 
-		<!-- Footer-Top-Area End -->
-		<!-- Footer-Middle-Area Start -->
-		<!-- Footer-Middle-Area Start -->
-		<div class="footer-middle-area">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-3 col-md-4 col-sm-4">
-						<div class="single-footer footer-about">
-							<h4 class="widget-title title-top-border">Contact us</h4>
-							<ul>
-								<li>
-									<i class="pe-7s-map-marker"></i>
-									<span>Dubai</span><br>
-									<span>+971 55 178 5800</span><br>
-									<i class="pe-7s-map-marker"></i>
-									<span>Dhaka</span><br>
-									<span>+971 55 178 5800</span><br>
-									<span style="padding-left: 45px;">niharika.momtaz@gmail.com</span>
-
-
-								</li>
-
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-3 hidden-md hidden-sm">
-						<div class="single-footer footer-menu">
-
-							<nav>
+			<!-- Footer-Top-Area End -->
+			<!-- Footer-Middle-Area Start -->
+			<!-- Footer-Middle-Area Start -->
+			<div class="footer-middle-area">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-3 col-md-4 col-sm-4">
+							<div class="single-footer footer-about">
+								<h4 class="widget-title title-top-border">Contact</h4>
 								<ul>
-									<li><a href="newsroom.html">News Room</a></li>
-									<li><a href="runway.html">Runway</a></li>
-									<li><a href="celebrity.html">Celebrity</a></li>
-									<li><a href="craft.html">Crafts</a></li>
-
-									<li><a href="artWeek.html">Bangladesh Art Week</a></li>
-									<li><a href="https://www.bangladeshartweek.com/" target="_blank">Heritage
-											Bangladesh</a></li>
-
-									<li><a href="colaboration.html" style="color: white">Colaboration</a></li>
-									<li><a href="Auction.html" style="color: white">Auction</a></li>
+									<li>
+										<i class="pe-7s-map-marker"></i>
+										<span>Dubai</span><br>
+										<span>+971 55 178 5800</span><br>
+										<i class="pe-7s-map-marker"></i>
+										<span>Dhaka</span><br>
+										<span>+880 171 156 4862</span><br>
+										<span style="padding-left: 45px;">niharika.momtaz@gmail.com</span>
+									</li>
 								</ul>
-							</nav>
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-4 col-sm-4">
-						<div class="single-footer footer-menu">
-							<h4 class="widget-title title-top-border">Colelctions</h4>
-							<nav>
-								<ul>
-									<li><a href="https://www.facebook.com/groups/260534944108007">1972</a></li>
-									<li><a href="https://www.facebook.com/groups/260534944108007">1972 Consious</a></li>
-									<li><a href="https://www.facebook.com/OutLiner.zenana">OunLiner</a></li>
-									<li><a href="https://www.facebook.com/groups/zenanamarketplace">Zenana</a></li>
-									<li><a href="heritage.html"> Weaving the Heritage</a></li>
-								</ul>
-							</nav>
-						</div>
-					</div>
-					<div class="col-lg-2  hidden-md hidden-sm">
-						<div class="single-footer instagram">
-							<h4 class="widget-title title-top-border">Follow us on :</h4>
-							<!-- <div class="instagram-thumb">
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/1.jpg"
-											alt="" /></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/2.jpg"
-											alt="" /></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/3.jpg"
-											alt="" /></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/4.jpg"
-											alt="" /></a>
-								</div> -->
-							<div class="social-media">
-								<a href="https://www.facebook.com/niharika.momtaz"><i class="fa fa-facebook"></i></a>
-								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><i
-										class="fa fa-instagram"></i></a>
-							</div>
-							<br>
-							<div class="social-media">
-								<a href="https://twitter.com/niharikamomtaz?lang=bn"
-									class="animate fade-in animation-time-1s delay-1s"><i class="fa fa-twitter"></i></a>
-								<a href="https://www.pinterest.com/niharikamomtaz/_saved/"
-									class="animate fade-in animation-time-1s delay-08s"><i
-										class="fa fa-pinterest"></i></a>
 							</div>
 						</div>
-					</div>
 
-				</div>
-			</div>
-		</div>
-		<!-- Footer-Middle-Area End -->
-		<!-- Copyright-Area Start -->
-		<div class="copyright-area">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-8">
-						<div class="copyright">
-							<p>Copyright &copy; <a href="#" target="_blank"><b> oraintech.solution </b></a> All rights
-								reserved.</p>
+						<div class="col-lg-3 col-md-4 col-sm-4">
+							<div class="single-footer footer-menu">
+								<h4 class="widget-title title-top-border">Collections</h4>
+								<nav>
+									<ul>
+										<li><a href="https://www.facebook.com/groups/260534944108007">1972</a></li>
+										<li><a href="https://www.facebook.com/groups/260534944108007">1972 Conscious
+											</a></li>
+										<!-- <li><a href="https://www.facebook.com/OutLiner.zenana">OutLiner</a></li> -->
+										<li><a href="https://www.facebook.com/groups/zenanamarketplace">Zenana</a></li>
+									</ul>
+								</nav>
+							</div>
 						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="payment">
-							<a href="#"><i class="fa fa-cc-paypal"></i></a>
-							<a href="#"><i class="fa fa-cc-visa"></i></a>
-							<a href="#"><i class="fa fa-cc-mastercard"></i></a>
-							<a href="#"><i class="fa fa-cc-stripe"></i></a>
+						<div class="col-lg-3 hidden-md hidden-sm">
+							<div class="single-footer footer-menu">
+
+								<nav>
+									<ul>
+										<li><a href="newsroom.html">Gallery</a></li>
+										<li><a href="artWeek.html">Bangladesh Art Week</a></li>
+										<li><a href="https://www.bangladeshartweek.com/" target="_blank">Herittage Bangladesh</a></li>
+										<li><a href="metamoyna.html" >Meta Moyna</a></li>
+										<li><a href="colaboration.html" >Colaboration</a></li>
+										<li><a href="Auction.html" >Auction</a></li>
+									</ul>
+								</nav>
+							</div>
 						</div>
+						<div class="col-lg-2  hidden-md hidden-sm">
+							<div class="single-footer instagram">
+								<h4 class="widget-title title-top-border">Follow us on :</h4>
+								<!-- <div class="instagram-thumb">
+								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/1.jpg"
+										alt="" /></a>
+								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/2.jpg"
+										alt="" /></a>
+								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/3.jpg"
+										alt="" /></a>
+								<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><img src="img/instagram/4.jpg"
+										alt="" /></a>
+							</div> -->
+								<div class="social-media">
+									<a href="https://www.facebook.com/niharika.momtaz" target="_blank"><i
+											class="fa fa-facebook"></i></a>
+									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn" target="_blank"><i
+											class="fa fa-instagram"></i></a>
+									<a href="https://www.pinterest.com/niharikamomtaz/_saved/" target="_blank"
+											class="animate fade-in animation-time-1s delay-08s"><i
+												class="fa fa-linkedin"></i></a>
+
+								</div>
+								<br>
+								<div class="social-media">
+									<a href="https://twitter.com/niharikamomtaz?lang=bn" target="_blank"
+										class="animate fade-in animation-time-1s delay-1s"><i
+											class="fa fa-twitter"></i></a>
+									<a href="https://www.pinterest.com/niharikamomtaz/_saved/" target="_blank"
+										class="animate fade-in animation-time-1s delay-08s"><i
+											class="fa fa-pinterest"></i></a>
+									<a href="https://www.youtube.com" target="_blank"
+										class="animate fade-in animation-time-1s delay-08s"><i
+											class="fa fa-youtube"></i></a>
+									
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
-		</div>
-		<!-- Copyright-Area End -->
-		<!-- Copyright-Area End -->
-	</footer>
+			<!-- Footer-Middle-Area End -->
+			<!-- Copyright-Area Start -->
+			<div class="copyright-area">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-8">
+							<div class="copyright">
+								<p>Copyright &copy; <a href="#" target="_blank"><b> Niharika Momtaz </b></a> All
+									rights
+									reserved. Powered by Orain Tech</p>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="payment">
+								<a href="#"><i class="fa fa-cc-paypal"></i></a>
+								<a href="#"><i class="fa fa-cc-visa"></i></a>
+								<a href="#"><i class="fa fa-cc-mastercard"></i></a>
+								<a href="#"><i class="fa fa-cc-stripe"></i></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Copyright-Area End -->
+			<!-- Copyright-Area End -->
+		</footer>
 	<!-- FOOTER-AREA END -->
 
 
