--- a/about.html
+++ b/about.html
@@ -384,7 +384,7 @@
 
 						<div class="col-lg-3 col-md-4 col-sm-4">
 							<div class="single-footer footer-menu">
-								<h4 class="widget-title title-top-border">Brandz</h4>
+								<h4 class="widget-title title-top-border">Collections</h4>
 								<nav>
 									<ul>
 										<li><a href="https://www.facebook.com/groups/260534944108007">1972</a></li>
@@ -403,11 +403,10 @@
 									<ul>
 										<li><a href="newsroom.html">Gallery</a></li>
 										<li><a href="artWeek.html">Bangladesh Art Week</a></li>
-										<li><a href="https://www.bangladeshartweek.com/" target="_blank">Herittage
-												Bangladesh</a></li>
-
-										<li><a href="colaboration.html" style="color: white">Colaboration</a></li>
-										<li><a href="Auction.html" style="color: white">Auction</a></li>
+										<li><a href="https://www.bangladeshartweek.com/" target="_blank">Herittage Bangladesh</a></li>
+										<li><a href="metamoyna.html" >Meta Moyna</a></li>
+										<li><a href="colaboration.html" >Colaboration</a></li>
+										<li><a href="Auction.html" >Auction</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -426,20 +425,27 @@
 										alt="" /></a>
 							</div> -->
 								<div class="social-media">
-									<a href="https://www.facebook.com/niharika.momtaz"><i
+									<a href="https://www.facebook.com/niharika.momtaz" target="_blank"><i
 											class="fa fa-facebook"></i></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><i
+									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn" target="_blank"><i
 											class="fa fa-instagram"></i></a>
+									<a href="https://www.pinterest.com/niharikamomtaz/_saved/" target="_blank"
+											class="animate fade-in animation-time-1s delay-08s"><i
+												class="fa fa-linkedin"></i></a>
 
 								</div>
 								<br>
 								<div class="social-media">
-									<a href="https://twitter.com/niharikamomtaz?lang=bn"
+									<a href="https://twitter.com/niharikamomtaz?lang=bn" target="_blank"
 										class="animate fade-in animation-time-1s delay-1s"><i
 											class="fa fa-twitter"></i></a>
-									<a href="https://www.pinterest.com/niharikamomtaz/_saved/"
+									<a href="https://www.pinterest.com/niharikamomtaz/_saved/" target="_blank"
 										class="animate fade-in animation-time-1s delay-08s"><i
 											class="fa fa-pinterest"></i></a>
+									<a href="https://www.youtube.com" target="_blank"
+										class="animate fade-in animation-time-1s delay-08s"><i
+											class="fa fa-youtube"></i></a>
+									
 								</div>
 							</div>
 						</div>
@@ -454,9 +460,9 @@
 					<div class="row">
 						<div class="col-sm-8">
 							<div class="copyright">
-								<p>Copyright &copy; <a href="#" target="_blank"><b> oraintech.solution </b></a> All
+								<p>Copyright &copy; <a href="#" target="_blank"><b> Niharika Momtaz </b></a> All
 									rights
-									reserved.</p>
+									reserved. Powered by Orain Tech</p>
 							</div>
 						</div>
 						<div class="col-sm-4">
