--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
 		<link rel="stylesheet" href="style.css">
 		<!-- responsive css -->
 		<link rel="stylesheet" href="css/responsive.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 		<!-- modernizr js -->
 		<script src="js/vendor/modernizr-2.8.3.min.js"></script>
 	</head>
@@ -125,7 +126,7 @@
 		</header>
 		<!-- HEADER-AREA END -->
 		<!-- MOBILE-MENU-AREA START -->
-		<div class="mobile-menu-area hidden-md hidden-lg">
+		<div class="mobile-menu-area hidden-md hidden-lg text-dark">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-xs-12">
@@ -191,26 +192,23 @@
 								<div class="single-contact">
 									<div class="row">
 										<div class="col-sm-6 col-xs-12">
-											<div class="contact-photo">
-												<a href="#"><img src="img/contact/location.jpg" alt="#" /></a>
+											<div class="contact-photo ">
+												
+												<a href="https://goo.gl/maps/QY1TXC5RmWtWghfUA" target="_blank"><img src="img/contact/location.jpg" alt="#" /></a>
 											</div>
 										</div>
 										<div class="col-sm-6 col-xs-12">
 											<div class="contact-brief">
 												<!-- <h2 class="title-3">Dubai</h2> -->
 												<ul>
-
 													<li>
 														<i class="pe-7s-call"></i>
 														<span>Dubai - +971 55 178 5800</span>
 														<span>Dhaka - +880 171 156 4862</span>
 													</li>
-
-
 													<li>
 														<i class="pe-7s-mail-open"></i>
 														<span>niharika.momtaz@gmail.com</span>
-
 													</li>
 												</ul>
 											</div>
@@ -282,11 +280,10 @@
 									<ul>
 										<li><a href="newsroom.html">Gallery</a></li>
 										<li><a href="artWeek.html">Bangladesh Art Week</a></li>
-										<li><a href="https://www.bangladeshartweek.com/" target="_blank">Herittage
-												Bangladesh</a></li>
-
-										<li><a href="colaboration.html" style="color: white">Colaboration</a></li>
-										<li><a href="Auction.html" style="color: white">Auction</a></li>
+										<li><a href="https://www.bangladeshartweek.com/" target="_blank">Herittage Bangladesh</a></li>
+										<li><a href="metamoyna.html" >Meta Moyna</a></li>
+										<li><a href="colaboration.html" >Colaboration</a></li>
+										<li><a href="Auction.html" >Auction</a></li>
 									</ul>
 								</nav>
 							</div>
@@ -305,20 +302,27 @@
 										alt="" /></a>
 							</div> -->
 								<div class="social-media">
-									<a href="https://www.facebook.com/niharika.momtaz"><i
+									<a href="https://www.facebook.com/niharika.momtaz" target="_blank"><i
 											class="fa fa-facebook"></i></a>
-									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn"><i
+									<a href="https://www.instagram.com/niharikamomtaz/?hl=bn" target="_blank"><i
 											class="fa fa-instagram"></i></a>
+									<a href="https://www.pinterest.com/niharikamomtaz/_saved/" target="_blank"
+											class="animate fade-in animation-time-1s delay-08s"><i
+												class="fa fa-linkedin"></i></a>
 
 								</div>
 								<br>
 								<div class="social-media">
-									<a href="https://twitter.com/niharikamomtaz?lang=bn"
+									<a href="https://twitter.com/niharikamomtaz?lang=bn" target="_blank"
 										class="animate fade-in animation-time-1s delay-1s"><i
 											class="fa fa-twitter"></i></a>
-									<a href="https://www.pinterest.com/niharikamomtaz/_saved/"
+									<a href="https://www.pinterest.com/niharikamomtaz/_saved/" target="_blank"
 										class="animate fade-in animation-time-1s delay-08s"><i
 											class="fa fa-pinterest"></i></a>
+									<a href="https://www.youtube.com" target="_blank"
+										class="animate fade-in animation-time-1s delay-08s"><i
+											class="fa fa-youtube"></i></a>
+									
 								</div>
 							</div>
 						</div>
@@ -333,9 +337,9 @@
 					<div class="row">
 						<div class="col-sm-8">
 							<div class="copyright">
-								<p>Copyright &copy; <a href="#" target="_blank"><b> oraintech.solution </b></a> All
+								<p>Copyright &copy; <a href="#" target="_blank"><b> Niharika Momtaz </b></a> All
 									rights
-									reserved.</p>
+									reserved. Powered by Orain Tech</p>
 							</div>
 						</div>
 						<div class="col-sm-4">
